resources/tests/parser/bad/imports.gshl
import "qwe"
import
import 324
import = 3
import {}:"|"
import L:"@#3"
